--- a/s4-meter-controller/src/main/resources/s4-meter.properties
+++ b/s4-meter-controller/src/main/resources/s4-meter.properties
@@ -9,10 +9,11 @@ s4Adaptor.hostname = localhost
 s4Adaptor.port = 2334
 
 # Remote event generator properties.
-generator.eventGeneratorClass = io.s4.meter.controller.plugin.words.RandomDocGenerator
-generator.dependentClasses = io.s4.meter.controller.plugin.words.WordGenerator
-generator.hostnames = localhost, localhost, localhosts
-generator.port = 8182
+generator.module = io.s4.meter.controller.plugin.randomdoc.RandomDocModule
+generator.eventGeneratorClass = io.s4.meter.controller.plugin.randomdoc.RandomDocGenerator
+generator.dependentClasses = io.s4.meter.controller.plugin.randomdoc.RandomWord
+generator.hostnames = localhost, localhost
+generator.ports = 8182, 8183
 generator.instanceURI = /s4meter/generator
 generator.classURI = /s4meter/generator_class
 
