Fixed another string in property file.

--- a/s4-meter-controller/src/main/resources/s4-meter.properties
+++ b/s4-meter-controller/src/main/resources/s4-meter.properties
@@ -2,7 +2,7 @@
 
 # S4 application properties.
 s4App.streamName = RawDoc
-s4App.eventClassName = io.s4.meter.controller.plugin.words.Document
+s4App.eventClassName = io.s4.meter.controller.plugin.randomdoc.Document
 
 # S4 adaptor properties
 s4Adaptor.hostname = localhost
