Added action resource to send arbitrary commands to remote generators. Clean up.

--- a/s4-meter-controller/src/main/resources/s4-meter.properties
+++ b/s4-meter-controller/src/main/resources/s4-meter.properties
@@ -16,6 +16,7 @@ generator.hostnames = localhost, localhost
 generator.ports = 8182, 8183
 generator.instanceURI = /s4meter/generator
 generator.classURI = /s4meter/generator_class
+generator.actionURI = /s4meter/action
 
 # Custom event generator properties. These properties depend on the event generator being used.
 randomDocGenerator.wordSize = 10
