--- a/s4-meter-generator/src/main/resources/generator.properties
+++ b/s4-meter-generator/src/main/resources/generator.properties
@@ -1,4 +1,5 @@
 generator.port = 8182
 generator.instanceURI = /s4meter/generator
 generator.classURI = /s4meter/generator_class
+generator.actionURI = /s4meter/action
 
