Added support to control event rate in generators.

--- a/s4-meter-controller/src/main/resources/s4-meter.properties
+++ b/s4-meter-controller/src/main/resources/s4-meter.properties
@@ -17,8 +17,9 @@ generator.ports = 8182, 8183
 generator.instanceURI = /s4meter/generator
 generator.classURI = /s4meter/generator_class
 generator.actionURI = /s4meter/action
+generator.eventRate = 10
 
 # Custom event generator properties. These properties depend on the event generator being used.
 randomDocGenerator.wordSize = 10
 randomDocGenerator.numWordsPerDoc = 6
-randomDocGenerator.numEvents = 10
+randomDocGenerator.numEvents = 1000
