- Added a Controller object to implement start(), getReport(), etc. - Made changes to support multiple Adaptor hosts. - Improved EventGenerator API. Now developer only needs to implement getDocument() and init() methods. - Calculate teh exact sleep time to achieve target event rate. - Removed reflection code to call teh start() method in EventGenerator. Reflection is not needed. - Make sure we close driver conn when we exit normally and when there is an interrupt.

--- a/s4-meter-controller/src/main/resources/s4-meter.properties
+++ b/s4-meter-controller/src/main/resources/s4-meter.properties
@@ -5,8 +5,8 @@ s4App.streamName = RawDoc
 s4App.eventClassName = io.s4.meter.controller.plugin.randomdoc.Document
 
 # S4 adaptor properties
-s4Adaptor.hostname = localhost
-s4Adaptor.port = 2334
+s4Adaptor.hostnames = localhost, localhost
+s4Adaptor.ports = 2334, 2334
 
 # Remote event generator properties.
 generator.module = io.s4.meter.controller.plugin.randomdoc.RandomDocModule
@@ -17,9 +17,9 @@ generator.ports = 8182, 8183
 generator.instanceURI = /s4meter/generator
 generator.classURI = /s4meter/generator_class
 generator.actionURI = /s4meter/action
-generator.eventRate = 10
+generator.eventRate = 100
+generator.numEvents = 5000
 
 # Custom event generator properties. These properties depend on the event generator being used.
 randomDocGenerator.wordSize = 10
 randomDocGenerator.numWordsPerDoc = 6
-randomDocGenerator.numEvents = 1000
